test_fm/_test38.nj
//
// misplaced break
//

public class Main extends Object {

  public static void main() {
  }

  void f1(Boolean b) {
    local Integer x;
    x = 42;
    if (b) {
      break;
    }
    x = 43;
  }

}
